--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
   "scripts": {
     "dev": "next dev --port 3200",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3200",
     "lint": "next lint"
   },
   "dependencies": {
     "@googleapis/calendar": "^2.0.0",
     "@react-oauth/google": "^0.2.6",
     "@types/qs": "^6.9.7",
+    "@types/tough-cookie": "^4.0.2",
     "axios": "^0.27.2",
+    "axios-cookiejar-support": "^4.0.3",
     "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.3.1",
     "google-auth-library": "^8.1.1",
-    "html-pdf": "^3.0.1",
-    "next": "latest",
+    "js-cookie": "^3.0.1",
+    "next": "12.2.4-canary.9",
     "qs": "^6.11.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-query": "^3.39.2",
+    "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "@types/react-dom": "18.0.5",
-    "@types/request-ip": "^0.0.37",
     "autoprefixer": "^10.4.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
