--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.20.12",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@googleapis/calendar": "^2.0.0",
+    "@mui/material": "^5.4.1",
+    "@mui/system": "^5.11.2",
+    "@mui/x-date-pickers": "^5.0.13",
     "@react-oauth/google": "^0.2.6",
     "@types/qs": "^6.9.7",
     "@types/tough-cookie": "^4.0.2",
@@ -18,6 +24,7 @@
     "classnames": "^2.3.1",
     "google-auth-library": "^8.1.1",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "12.2.4-canary.9",
     "qs": "^6.11.0",
     "react": "18.1.0",
