--- a/package.json
+++ b/package.json
@@ -10,19 +10,15 @@
     "@babel/core": "^7.20.12",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@googleapis/calendar": "^2.0.0",
     "@mui/material": "^5.4.1",
     "@mui/system": "^5.11.2",
     "@mui/x-date-pickers": "^5.0.13",
     "@react-oauth/google": "^0.2.6",
-    "@types/qs": "^6.9.7",
-    "@types/tough-cookie": "^4.0.2",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "axios": "^0.27.2",
     "axios-cookiejar-support": "^4.0.3",
-    "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.3.1",
-    "google-auth-library": "^8.1.1",
+    "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "12.2.4-canary.9",
@@ -33,10 +29,14 @@
     "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/js-cookie": "^3.0.2",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.6.4",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.15",
     "@types/react-dom": "18.0.5",
+    "@types/tough-cookie": "^4.0.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
