--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
     "**/node_modules": true
   },
   "css.lint.unknownAtRules": "ignore",
-  "editor.fontLigatures": true
+  "editor.fontLigatures": true,
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
