--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3301",
+    "debuggerDev": "cross-env NODE_OPTIONS='--inspect' next dev --port 3301 ",
+    "dev": "next dev --port 3301 ",
     "build": "next build",
     "start": "next start --port 3200",
     "lint": "next lint"
   },
   "dependencies": {
     "@babel/core": "^7.20.12",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.4.1",
-    "@mui/system": "^5.11.2",
-    "@mui/x-date-pickers": "^5.0.13",
+    "@popperjs/core": "^2.11.6",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "axios": "^0.27.2",
     "axios-cookiejar-support": "^4.0.3",
     "classnames": "^2.3.1",
-    "dayjs": "^1.11.7",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.29.3",
     "js-cookie": "^3.0.1",
-    "moment": "^2.29.4",
-    "next": "12.2.4-canary.9",
+    "next": "^13.2.3",
     "qs": "^6.11.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.6.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "tough-cookie": "^4.0.0"
   },
@@ -38,7 +36,8 @@
     "@types/tough-cookie": "^4.0.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "^13.2.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
